--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,7 +58,7 @@ a {
     background-color: rgb(31, 31, 31);
     color: white;
     padding: 20px 10px;
-    margin-top: 40px;
+    margin: 10px 0px;
     border-radius: 20px;
     text-decoration: none;
     display: inline-block;
